--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,32 @@
-/*version 0.1*/
+/*version 0.2*/
 
 @import url(http://fonts.googleapis.com/css?family=Kalam);
 
+table, th, td {
+	/*border: 1px solid red;*/
+	text-align: left;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+th, td {
+	padding: 10px 15px 10px 15px;
+}
+
+tr#stripped:nth-child(even) {
+	background-color: #c9c9c9;
+}
+
+tr#stripped:nth-child(odd) {
+	background-color: #dddddd;
+}
+
 body{
 	margin:0px;
+	font-family: Helvetica;
 }
 body > div{
 	display:flex;
@@ -22,8 +45,7 @@ body > div > header{
 	height:100px;
 	flex:0 1 100%;
 	margin-top: 5em;
-	margin-bottom: 9em;
-
+	margin-bottom: 4em;
 	padding: 15px;
 
 }
@@ -63,7 +85,7 @@ body > div > footer{
 	justify-content:center;
 	padding-top: 20px;
 }
-
+/*
 div.menu::before {
 	content: "";
 	position: absolute;
@@ -72,7 +94,7 @@ div.menu::before {
 	width: 9em;
 	border-bottom: 6px solid black;
 }
-
+*/
 .menu_item1 {
 	height: 65px;
 	width: 55px;
@@ -154,11 +176,13 @@ div.menu::before {
 }
 
 .stripped_line {
-	height: 9px;
+	height: 6px;
 	background-image: url(border.png);
 	background-repeat: repeat-x;
 	margin-top: 0;
 	margin-bottom: 0px;
+	border-bottom: 1px solid #c9c9c9;
+
 }
 
 .footer_container {
@@ -177,13 +201,14 @@ div.menu::before {
 	justify-content: center;
 	padding-left: 100px;
 	padding-right: 100px;
+	padding-top: 20px;
+	border-bottom-style: 
 }
 
 .fic {
 	min-width: 200px;
 	max-width: 300px;
 	padding: 10px;
-	margin: 0px;
 }
 
 .fi_card1 {
@@ -225,5 +250,14 @@ div.menu::before {
 
 	.fic {
 		max-width: 100%;
+		margin: 0px;
+	}
+
+	.fi_card2 {
+		flex: 0 1 100%;
+	}
+
+	.fi_card3 {
+		flex: 0 1 100%;
 	}
 }
